// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package tari.dan.common;

message SideChainBlock {
  Node node = 1;
  InstructionSet instructions = 2;
}

message Node {
    bytes hash = 1;
    bytes parent = 2;
    uint32 height = 3;
    bool is_committed = 4;
}

message Instruction {
  uint32 template_id = 1;
  string method = 2;
  bytes args = 3;
  bytes sender = 4;
}

message InstructionSet{
  repeated Instruction instructions = 1;
}

message SignerSignature {
  bytes signer = 1;
  Signature signature = 2;
}

message Signature {
  bytes public_nonce = 1;
  bytes signature = 2;
}
